fixed alignement of nav-btn in open and closed state with position settings on root. Changed nav <a> tag to <Link>. Added Hooks to MobileNav component and made use of dispatch to toggle menu when nav Link is clicked.

--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -3,6 +3,10 @@ html {
   font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
 }
 
+.container {
+  position: relative;
+}
+
 body {
   font-family: $font-primary;
   font-weight: $font-weight-regular;
