--- a/client/src/styles/components/_mobile-nav.scss
+++ b/client/src/styles/components/_mobile-nav.scss
@@ -10,7 +10,6 @@
   justify-content: space-between;
   align-items: flex-start;
   padding: 1.5rem;
-  overflow-y: scroll;
 }
 
 .mobile-nav-hidden {
