--- a/client/src/styles/layout/_header.scss
+++ b/client/src/styles/layout/_header.scss
@@ -1,7 +1,8 @@
 .header {
   background-color: $color-canvas;
   box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
-  position: relative;
+  position: fixed;
+  width: 100%;
   z-index: 1;
   display: flex;
   justify-content: space-between;
